--- a/pom.xml
+++ b/pom.xml
@@ -246,6 +246,12 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>ru.yandex.qatools.embed</groupId>
+      <artifactId>postgresql-embedded</artifactId>
+      <version>2.2</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
       <version>1.7.1</version> <!-- Stay on 1.7.1 to support Java 6 -->
