--- a/pom.xml
+++ b/pom.xml
@@ -264,6 +264,12 @@
       <version>2.3</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.mvel</groupId>
+      <artifactId>mvel2</artifactId>
+      <version>2.3.2.Final</version>
+      <optional>true</optional>
+    </dependency>
   </dependencies>
 
   <build>
